# xcxde-drop-diviner

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.vite.json  vite.config.ts
.github/workflows/: deploy.yaml  release.yaml
public/favicon/: site.webmanifest
public/locales/en/: translation.json
public/locales/ja/: translation.json
src/: App.css  App.tsx  main.tsx  theme.ts
src/@types/: i18n.d.ts  muiStyles.d.ts
src/assets/data/: AMR_DlList.csv  AMR_PcList.csv  BTL_Enhance.csv  BTL_ItemSkillDoll.csv  BTL_ItemSkillInner.csv  BTL_ItemSkill_doll.csv  BTL_ItemSkill_inner.csv  CHR_ClassInfo.csv  CHR_EnList.csv  CHR_EnParam.csv  CHR_EnRstDebuffRev.csv  DEF_PcList.csv  DRP_AffixSlotTable.csv  DRP_AffixTable.csv  DRP_BoxTable.csv  DRP_BronzeBoxTable.csv  DRP_DlArmorTableGold.csv  DRP_DlArmorTable_Gold.csv  DRP_DlWpnTableGold.csv  DRP_DlWpnTableSilver.csv  DRP_DlWpnTable_Gold.csv  DRP_DlWpnTable_Silver.csv  DRP_GoldBoxTable.csv  DRP_Hazure.csv  DRP_ItemNumTable.csv  DRP_ItemTable.csv  DRP_LotMaterialTable.csv  DRP_LotRankTable.csv  DRP_PcArmorTableSilver.csv  DRP_PcArmorTable_Gold.csv  DRP_PcWpnLotTable.csv  DRP_PcWpnTableGold.csv  DRP_PcWpnTable_Gold.csv  DRP_SilverBoxTable.csv  ITM_Blueprint.csv  ITM_FigList.csv  ITM_MaterialList.csv  ITM_PieceList.csv  ITM_PreciousList.csv  RSC_EnList.csv  (+8 more)
src/common/: languages.ts
src/common/util/: fixed-size-queue.test.ts  (+5 more)
src/ui/: TopBar.tsx
wasm-rs/: Cargo.toml  LICENSE
wasm-rs/src/: fixed_size_queue.rs  lib.rs  mt_rand.rs  rng_state_search.rs
(+237 files in other folders)
