[package]
name = "wasm-rs"
description = "WASM for xcxde-rngmanip"
repository = "https://github.com/beta382/xcxde-rngmanip"
version = "1.0.0"
authors = ["Beta382 <beta382@gmail.com>"]
license-file = "../LICENSE"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]
default = []

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = [
  "-O4",
  "--flexible-inline-max-function-size",
  "4294967295",
]